#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2010-10-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.55 released.

        * Adding 'use dependency' statements to FullAuto.pm
          in another attempt to fix broken CPAN testers
          results


2010-10-08  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.54 released.

        * Added MLDBM::Sync Bootstrap code to Makefile.PL in
          yet another attempt to fix CPAN testers results

        * Removed VERSION variables from Distro files


2010-10-07  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.53 released.

        * Removed call to Cygwin mount in Windows section
          in Makefile.PL

        * Added conditional test for SED in Makefile.PL


2010-10-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.52 released.

        * Moved IO::Pty requirement to 1.09 for Cygwin

        * Added new argument -p and --plan for new "Plan"
          functionality


2010-10-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.51 released.

        * Fixed more permissions for Custom dir when choosing
          Default permissions

        * Fixed some bugs associated with the --edit feature

        * Fixed multiple addresses when sending email


2010-10-03  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.50 released.

        * Fixed permissions for Custom dir when choosing
          Default permissions

        * Switched back to IO::CaptureOutput for two functions
          that didn't work right with Capture::Tiny.